@@ -333,7 +333,7 @@ BEGIN
     BEGIN
         LEFTMARGIN, 5
         RIGHTMARGIN, 236
-        BOTTOMMARGIN, 239
+        BOTTOMMARGIN, 256
     END
 
     IDD_ADVANCEDMERGE, DIALOG
@@ -461,15 +461,15 @@ IDB_BROWSEURL_NEW_D     BITMAP                  "res\\toolbar\\browseurl_new_dis
 IDB_CHANGECOMBO_CLASSIC BITMAP                  "res\\toolbar\\changecombo_classic.bmp"
 IDB_CHANGECOMBO_NEW     BITMAP                  "res\\toolbar\\changecombo_new.bmp"
 IDB_CHANGECOMBO_NEW_D   BITMAP                  "res\\toolbar\\changecombo_new_disabled.bmp"
-IDB_CHANGEFONTMENU_CLASSIC BITMAP               "res\\toolbar\\changefont_classic.bmp"
+IDB_CHANGEFONTMENU_CLASSIC BITMAP                  "res\\toolbar\\changefont_classic.bmp"
 IDB_CHANGEFONTMENU_NEW  BITMAP                  "res\\toolbar\\changefont_new.bmp"
-IDB_CHANGEFONTMENU_NEW_D BITMAP                 "res\\toolbar\\changefont_new_disabled.bmp"
-IDB_CHANGEPSWDFONTMENU_CLASSIC BITMAP           "res\\toolbar\\changepswdfont_classic.bmp"
-IDB_CHANGEPSWDFONTMENU_NEW BITMAP               "res\\toolbar\\changepswdfont_new.bmp"
-IDB_CHANGEPSWDFONTMENU_NEW_D BITMAP             "res\\toolbar\\changepswdfont_new_disabled.bmp"
-IDB_CLEARCLIPBOARD_CLASSIC BITMAP               "res\\toolbar\\clearclipboard_classic.bmp"
+IDB_CHANGEFONTMENU_NEW_D BITMAP                  "res\\toolbar\\changefont_new_disabled.bmp"
+IDB_CHANGEPSWDFONTMENU_CLASSIC BITMAP                  "res\\toolbar\\changepswdfont_classic.bmp"
+IDB_CHANGEPSWDFONTMENU_NEW BITMAP                  "res\\toolbar\\changepswdfont_new.bmp"
+IDB_CHANGEPSWDFONTMENU_NEW_D BITMAP                  "res\\toolbar\\changepswdfont_new_disabled.bmp"
+IDB_CLEARCLIPBOARD_CLASSIC BITMAP                  "res\\toolbar\\clearclipboard_classic.bmp"
 IDB_CLEARCLIPBOARD_NEW  BITMAP                  "res\\toolbar\\clearclipboard_new.bmp"
-IDB_CLEARCLIPBOARD_NEW_D BITMAP                 "res\\toolbar\\clearclipboard_new_disabled.bmp"
+IDB_CLEARCLIPBOARD_NEW_D BITMAP                  "res\\toolbar\\clearclipboard_new_disabled.bmp"
 IDB_CLOSE_CLASSIC       BITMAP                  "res\\toolbar\\close_classic.bmp"
 IDB_CLOSE_NEW           BITMAP                  "res\\toolbar\\close_new.bmp"
 IDB_CLOSE_NEW_D         BITMAP                  "res\\toolbar\\close_new_disabled.bmp"
@@ -482,7 +482,7 @@ IDB_COMPARE_NEW_D       BITMAP                  "res\\toolbar\\compare_new_disab
 IDB_COPYNOTES_CLASSIC   BITMAP                  "res\\toolbar\\copynotes_classic.bmp"
 IDB_COPYNOTES_NEW       BITMAP                  "res\\toolbar\\copynotes_new.bmp"
 IDB_COPYNOTES_NEW_D     BITMAP                  "res\\toolbar\\copynotes_new_disabled.bmp"
-IDB_COPYPASSWORD_CLASSIC BITMAP                 "res\\toolbar\\copypassword_classic.bmp"
+IDB_COPYPASSWORD_CLASSIC BITMAP                  "res\\toolbar\\copypassword_classic.bmp"
 IDB_COPYPASSWORD_NEW    BITMAP                  "res\\toolbar\\copypassword_new.bmp"
 IDB_COPYPASSWORD_NEW_D  BITMAP                  "res\\toolbar\\copypassword_new_disabled.bmp"
 IDB_COPYUSER_CLASSIC    BITMAP                  "res\\toolbar\\copyuser_classic.bmp"
@@ -572,7 +572,7 @@ IDB_VIEWEDIT_NEW_D      BITMAP                  "res\\toolbar\\viewedit_new_disa
 IDB_VIEWREPORTS_CLASSIC BITMAP                  "res\\toolbar\\viewreports_classic.bmp"
 IDB_VIEWREPORTS_NEW     BITMAP                  "res\\toolbar\\viewreports_new.bmp"
 IDB_VIEWREPORTS_NEW_D   BITMAP                  "res\\toolbar\\viewreports_new_disabled.bmp"
-IDB_FINDADVANCED_CLASSIC BITMAP                 "res\\toolbar\\findadvanced_classic.bmp"
+IDB_FINDADVANCED_CLASSIC BITMAP                  "res\\toolbar\\findadvanced_classic.bmp"
 IDB_FINDADVANCED_NEW    BITMAP                  "res\\toolbar\\findadvanced_new.bmp"
 IDB_FINDCASE_I_CLASSIC  BITMAP                  "res\\toolbar\\findcase_i_classic.bmp"
 IDB_FINDCASE_I_NEW      BITMAP                  "res\\toolbar\\findcase_i_new.bmp"
@@ -905,7 +905,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Enter Safe Combination"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CONTROL         IDB_CLOGO,IDC_STATIC_LOGO,"Static",SS_BITMAP,7,14,32,30
+    CONTROL         220,IDC_STATIC_LOGO,"Static",SS_BITMAP,7,14,32,30
     LTEXT           "Please enter the safe combination for this password database.",IDC_STATIC,48,10,196,8
     LTEXT           "Name. Name. Name.",IDC_MESSAGE,48,20,196,8,SS_NOPREFIX | SS_PATHELLIPSIS
     LTEXT           "Safe Combination:",IDC_STATIC,48,34,45,18
@@ -921,7 +921,7 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Enter Safe Combination"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CONTROL         IDB_CLOGO,IDC_STATIC_LOGO,"Static",SS_BITMAP,7,14,32,30
+    CONTROL         220,IDC_STATIC_LOGO,"Static",SS_BITMAP,7,14,32,30
     LTEXT           "Please enter the safe combination for this password database.",IDC_STATIC,48,10,213,8
     LTEXT           "Name. Name. Name.",IDC_MESSAGE,48,20,196,8,SS_NOPREFIX | SS_PATHELLIPSIS
     LTEXT           "Safe Combination:",IDC_STATIC,48,34,45,18
@@ -1148,7 +1148,7 @@ BEGIN
     LTEXT           "Line delimiter in Notes field:",IDC_STATIC,8,105,86,8
 END
 
-IDD_ADVANCED DIALOGEX 0, 0, 245, 246
+IDD_ADVANCED DIALOGEX 0, 0, 245, 263
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Export Text Extra"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -1168,11 +1168,13 @@ BEGIN
     PUSHBUTTON      ">>",IDC_ADVANCED_SELECTALL,115,125,15,14
     PUSHBUTTON      "<",IDC_ADVANCED_DESELECTSOME,115,174,15,14
     PUSHBUTTON      "<<",IDC_ADVANCED_DESELECTALL,115,191,15,14
-    DEFPUSHBUTTON   "OK",IDOK,27,224,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,97,224,50,14
-    PUSHBUTTON      "&Help",ID_HELP,167,224,50,14
+    DEFPUSHBUTTON   "OK",IDOK,27,238,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,97,238,50,14
+    PUSHBUTTON      "&Help",ID_HELP,167,238,50,14
     GROUPBOX        "",IDC_STATIC,5,2,234,74
     LTEXT           "Selected Fields:",IDC_STATIC,135,83,103,8
+    CONTROL         "Treat fields that only contain 'whitespace' as empty",IDC_TREATWHITESPACEASEMPTY,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,225,231,10
 END
 
 IDD_ADVANCEDMERGE DIALOGEX 0, 0, 223, 98
